Fixes shareToggle spacing, requires verticalMetadata titles to be dark color

--- a/css/global.scss
+++ b/css/global.scss
@@ -7619,12 +7619,6 @@ a.toggle-date-range-filter{
 
 //begin compoundChild post-actionBar
 
-body.compoundChild{
-  #shareToggle{
-    margin-left: 0px;
-  }
-}
-
 //begin content stats
 body.context-data{
 
